--- a/src/app/Views/edit/edit.component.html
+++ b/src/app/Views/edit/edit.component.html
@@ -1,31 +1,44 @@
 <div class="container">
     <div class="responsive">
 
-            <!-- <button (click)="changeemilio(false)" >update emilio</button>
+        <div class="row sticky-top" style="background: #dfdada;border-radius: 0px 0px 10px 10px;">
+            <div class="col-10">
+                <h1>Editar</h1>
+            </div>
+            <div class="col-2" style="text-align: right;display: flex;align-items: center;flex-direction: row-reverse;">
+                <button class="btn btn-outline-success" [routerLink]="'/'" >Inicio</button>
+            </div>
+           
+        </div>
 
-            <app-dialog [hidden]="astroApiService.emilio"></app-dialog> -->
 
-            <div>
 
-                <label>Name</label>
-                <input type="text" name="name" class="form-control" placeholder="nombre" [(ngModel)]="objectProduct.name" required #name="ngModel">
 
-                <label>Description</label>
-                <input type="text" name="age" class="form-control" placeholder="age" [(ngModel)]="objectProduct.description" required #name="ngModel">
+            <div class="row mt-3" >
 
-                <label>Sku</label>
-                <input type="text" name="nationality" class="form-control" placeholder="nacionalidad" [(ngModel)]="objectProduct.sku" required #name="ngModel">
+                <div class="col-12">
+                    <label>Name</label>
+                    <input type="text" name="name" class="form-control" placeholder="nombre" [(ngModel)]="objectProduct.name" required #name="ngModel">
+    
+                    <label>Description</label>
+                    <input type="text" name="age" class="form-control" placeholder="age" [(ngModel)]="objectProduct.description" required #name="ngModel">
+    
+                    <label>Sku</label>
+                    <input type="text" name="nationality" class="form-control" placeholder="nacionalidad" [(ngModel)]="objectProduct.sku" required #name="ngModel">
+    
+                    <label>Imagen</label>
+                    <textarea name="bio" class="form-control" placeholder="bio" [(ngModel)]="objectProduct.imagen" required #name="ngModel"></textarea>
+                 
+                    <label>Type</label>
+                    <input type="text" name="type" class="form-control" placeholder="type" [(ngModel)]="objectProduct.type" required #name="ngModel">
+    
+                    <label>Price</label>
+                    <input type="text" name="price" class="form-control" placeholder="price" [(ngModel)]="objectProduct.price" required #name="ngModel">
+    
+                    <button class="btn btn-outline-success mt-3" (click)="editProduct()" >update</button>
+                </div>
 
-                <label>Imagen</label>
-                <textarea name="bio" class="form-control" placeholder="bio" [(ngModel)]="objectProduct.imagen" required #name="ngModel"></textarea>
-             
-                <label>Type</label>
-                <input type="text" name="type" class="form-control" placeholder="type" [(ngModel)]="objectProduct.type" required #name="ngModel">
-
-                <label>Price</label>
-                <input type="text" name="price" class="form-control" placeholder="price" [(ngModel)]="objectProduct.price" required #name="ngModel">
-
-                <button class="btn btn-outline-success" (click)="editProduct()" >update</button>
+                
 
             </div>
     </div>
