--- a/src/app/Views/show/show.component.html
+++ b/src/app/Views/show/show.component.html
@@ -22,7 +22,7 @@
 
         <div class="row">
             <div class="col-12">
-                <table mat-table [dataSource]="this.superApi.productsempty ">
+                <table mat-table [dataSource]="superApi.productsempty ">
 
                     <ng-container matColumnDef="imagen">
                         <th mat-header-cell *matHeaderCellDef> Imagen </th>
@@ -48,7 +48,7 @@
                         <th mat-header-cell *matHeaderCellDef> actions </th>
                         <td mat-cell *matCellDef="let product"> 
                           
-                            <button class="btn btn-outline-success" [routerLink]="'edit/'+product._id" >Editar</button>
+                            <button class="btn btn-outline-success" style="margin-right: 2px;" [routerLink]="'edit/'+product._id" >Editar</button>
                             <button class="btn btn-outline-danger" (click)="superApi.deleteProduct(product._id)">Delete</button>
                         
                         </td>
@@ -117,3 +117,4 @@
 
 
 </div>
+
