nueva vista logs

--- a/src/app/Views/edit/edit.component.html
+++ b/src/app/Views/edit/edit.component.html
@@ -35,7 +35,7 @@
                     <label>Price</label>
                     <input type="text" name="price" class="form-control" placeholder="price" [(ngModel)]="objectProduct.price" required #name="ngModel">
     
-                    <button class="btn btn-outline-success mt-3" (click)="editProduct()" >update</button>
+                    <button class="btn btn-outline-success mt-3" (click)="editProduct()" >Editar</button>
                 </div>
 
                 
