--- a/src/app/Views/show/show.component.html
+++ b/src/app/Views/show/show.component.html
@@ -49,7 +49,7 @@
                         <td mat-cell *matCellDef="let product"> 
                           
                             <button class="btn btn-outline-success" style="margin-right: 2px;" [routerLink]="'edit/'+product._id" >Editar</button>
-                            <button class="btn btn-outline-danger" (click)="superApi.deleteProduct(product._id)">Delete</button>
+                            <button class="btn btn-outline-danger" (click)="superApi.deleteProduct(product._id)">Borrar</button>
                         
                         </td>
         
